# Virtual-Assistant

./: .gitignore  DockerFile  README.md  docker-compose.yml  pyproject.toml
virtualassistant/: app.py  db_conn.py  query_builder.py  settings.py
